feat: Introduce admin content management page with publish/unpublish features and integrate analytics with observability setup.

--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,15 @@
-# API
-NEXT_PUBLIC_API_URL=http://localhost:3001
-API_URL=http://localhost:3001
+# App
+NEXT_PUBLIC_APP_URL=http://localhost:3000
 
-# Database
-DATABASE_URL=postgresql://postgres:password@localhost:5432/guessalator
+# Backend
+NEXT_PUBLIC_API_URL=http://localhost:3000
 
-# Auth
-NEXTAUTH_SECRET=__REPLACE_WITH_RANDOM_SECRET__
-NEXTAUTH_URL=http://localhost:3000
-
-# Cloudinary
-CLOUDINARY_CLOUD_NAME=__REPLACE_WITH_CLOUDINARY_NAME__
-CLOUDINARY_API_KEY=__REPLACE_WITH_CLOUDINARY_KEY__
-CLOUDINARY_API_SECRET=__REPLACE_WITH_CLOUDINARY_SECRET__
-
-# Supabase (Optional)
-SUPABASE_URL=__REPLACE_WITH_SUPABASE_URL__
-SUPABASE_ANON_KEY=__REPLACE_WITH_SUPABASE_KEY__
-
-# Sentry Error Tracking & Monitoring
-NEXT_PUBLIC_SENTRY_DSN=https://0b4e0d46e73ea395940e34c0c82b6ebf@o4510586223656960.ingest.de.sentry.io/4510586228047952
+# Observability - Sentry
+NEXT_PUBLIC_SENTRY_DSN=__REPLACE_WITH_SENTRY_FRONTEND_DSN__
 NEXT_PUBLIC_SENTRY_ENVIRONMENT=production
 NEXT_PUBLIC_SENTRY_TRACES_SAMPLE_RATE=0.1
+
+# Observability - OpenTelemetry (Grafana)
+NEXT_PUBLIC_OTEL_EXPORTER_OTLP_ENDPOINT=__REPLACE_WITH_GRAFANA_OTLP_ENDPOINT__
+NEXT_PUBLIC_OTEL_EXPORTER_OTLP_HEADERS=Authorization=Bearer __REPLACE_WITH_GRAFANA_API_KEY__
+NEXT_PUBLIC_OTEL_SERVICE_NAME=quiz-frontend
